--- a/index.html
+++ b/index.html
@@ -4,31 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <!-- <link rel="stylesheet" href="./css/normalize.css" /> -->
     <link rel="stylesheet" href="./Css/styles.css" />
-    <title>Vanilla Example</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Adidas</title>
   </head>
-  <body class="container">
-    <header><h1>Vanilla Example</h1></header>
-    <nav>
-      <a href="./index.html">Home</a>
-      <a href="./signup.html">Sign Up</a>
-    </nav>
+  <body>
+    <header class="alto">
+        <nav class="navbar" style="background-color: #0b0b0b; color: aliceblue;">
+              <a class="navbar-brand"><img class="logo" src="./img/ese.png"width="80px" height="80px"></a>
+
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./signup.html">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Sign in</a>
+                    </li>
+                </ul>
+    </header>
+    
     <main>
-      <section>
-        <p class="fs-1rem">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. A voluptates
-          dolore maxime eligendi asperiores ipsa repudiandae enim rem at modi
-          molestiae neque, aliquid eum? Ad nemo obcaecati exercitationem omnis
-          provident!
-        </p>
-        <p class="fs-1em">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. A voluptates
-          dolore maxime eligendi asperiores ipsa repudiandae enim rem at modi
-          molestiae neque, aliquid eum? Ad nemo obcaecati exercitationem omnis
-          provident!
-        </p>
-      </section>
+      <section >
+        <h2 style="text-align: center;">¿Quieres comprar?</h2>
+        <div >
+            <div >
+                <h2 style="text-align: center;">Tienes que registrarte</h2>
+                <p >
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas, voluptatum natus labore nesciunt consequatur iste exercitationem corporis placeat nisi est quam hic perspiciatis voluptatem unde et molestias veniam accusantium? Reiciendis!
+                    <br>
+                    <br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero dignissimos, rem sapiente laudantium illo maxime voluptate praesentium nemo fugiat provident molestiae quae impedit necessitatibus ipsam hic rerum suscipit ex doloremque.
+                    <br>
+                    <br>
+                </p>
+            </div>
+        </div>
+    </section>
     </main>
-  </body>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+ 
+</body>
 </html>
