--- a/signup.html
+++ b/signup.html
@@ -6,14 +6,28 @@
     <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
     <link rel="stylesheet" href="./Css/normalize.css" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Vanilla Example</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <title>Adidas</title>
   </head>
-  <body class="container">
-    <header><h1>Vanilla Example</h1></header>
-    <nav>
-      <a href="./index.html">Home</a>
-      <a href="./signup.html">Sign Up</a>
-    </nav>
+  <body>
+    <header class="alto">
+        <nav class="navbar" style="background-color: #0b0b0b; color: aliceblue;">
+              <a class="navbar-brand"><img class="logo" src="./img/ese.png"width="80px" height="80px"></a>
+
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="./signup.html">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Sign in</a>
+                    </li>
+                </ul>
+    </header>
+    
     <main>
       <section>
         <form class="signup" id="signUp" autocomplete="off">
