--- a/signup.html
+++ b/signup.html
@@ -17,14 +17,15 @@
 
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                      <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                    </li>
+                 
+                    <li class="nav-item">
+                        <a class="nav-link" href="./ingresa.html">Ingresa</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="./signup.html">Sign Up</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Sign in</a>
-                    </li>
+                        <a class="nav-link" href="./signup.html">Registrate</a>
+                      </li>
                 </ul>
     </header>
     
