--- a/signup.html
+++ b/signup.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
+    <link rel="stylesheet" href="./Css/registro.css" />
     <link rel="stylesheet" href="./Css/normalize.css" />
-    <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
     <title>Adidas</title>
@@ -33,29 +32,57 @@
       <section>
         <form class="signup" id="signUp" autocomplete="off">
           <fieldset>
-            <legend>Sign Up</legend>
-            <label for="name">Enter your name</label>
-            <input type="text" id="name" name="name" required />
+            <legend style="text-align: center;">Registrate</legend>
+
+            <label for="name" class="form-label" >Ingrese su nombre</label>
+            <input type="text" id="name" name="name" class="form-control" required />
+
             <div id="nameWarning" class="warning"></div>
-            <label for="email">Enter your email</label>
-            <input type="email" id="email" name="email" required />
+
+            <label for="email" class="form-label">Ingrese su correo</label>
+            <input type="email" id="email" name="email" class="form-control" required />
             <div id="emailWarning" class="warning"></div>
-            <label for="password">Enter your password</label>
-            <input type="password" id="password" name="password" required />
+            <label for="password" class="form-label">Ingrese su contraseña</label>
+            <input type="password" id="password" name="password" class="form-control" required />
             <div id="passwordWarning" class="warning"></div>
-            <label for="passwordConfirm">Confirm your password</label>
+            <label for="passwordConfirm" class="form-label">Confirme su contraseña</label>
+
             <input
+
               type="password"
               id="passwordConfirm"
               name="passwordConfirm"
               required
             />
+            
             <div id="passwordConfirmWarning" class="warning"></div>
+
+            <div>
+                <label for="inputState" class="form-label">Lugar de residencia</label>
+                <select id="inputState" class="form-select">
+                  <option selected>Cambiar...</option>
+                  <option>Colombia</option>
+                  <option>EEUU</option>
+                  <option>México</option>
+                </select>
+            </div>
+
+            <div id="labelWarning" class="warning"></div>
+
+
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                 Confirme si es mayor de 18 Años
+                </label>
+              </div>
+
           </fieldset>
-          <button type="submit" name="submitButton" disabled>Sign Up</button>
+          <button type="submit" name="submitButton" class="btn btn-primary" disabled>Sign Up</button>
         </form>
       </section>
       <script src="./js/signup.js"></script>
+
     </main>
   </body>
 </html>
