--- a/ingresa.html
+++ b/ingresa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="./css/reset.css" /> -->
      <link rel="stylesheet" href="./css/normalize.css" /> 
-    <link rel="stylesheet" href="./Css/styles.css" />
+    <link rel="stylesheet" href="./Css/registro.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Adidas</title>
   </head>
@@ -29,24 +29,28 @@
     </header>
     
     <main>
-      <form>
-        <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-        </div>
-        <div class="mb-3">
-          <label for="exampleInputPassword1" class="form-label">Password</label>
-          <input type="password" class="form-control" id="exampleInputPassword1">
-        </div>
-        <div class="mb-3 form-check">
-          <input type="checkbox" class="form-check-input" id="exampleCheck1">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+      <form class="signup" id="signUp" autocomplete="off">
+        <fieldset>
+          <legend style="text-align: center;">Registrate</legend>
+
+          <label for="name" class="form-label" >Ingrese su nombre</label>
+          <input type="text" id="name" name="name" class="form-control" required />
+          <div id="nameWarning" class="warning"></div>
+          <label for="password" class="form-label">Ingrese su contraseña</label>
+          <input type="password" id="password" name="password" class="form-control" required />
+          <div id="passwordWarning" class="warning"></div>
+
+
+          <div id="labelWarning" class="warning"></div>
+
+
+
+        </fieldset>
+        <button type="submit" name="submitButton" class="btn btn-primary" disabled>ingresar
+        </button>
       </form>
     </main>
-
+    <script src="./js/login.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
