agregando el login

--- a/signup.html
+++ b/signup.html
@@ -65,6 +65,7 @@
                   <option>EEUU</option>
                   <option>México</option>
                 </select>
+                <div id="inputStateWarning" class="warning"></div>
             </div>
 
             <div id="labelWarning" class="warning"></div>
